# ProShowPDF

./: .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOWNLOAD_GUIDE.html  PROMPT.txt  README.md  USER_GUIDE.md  _mkicon.py  deploy.bat  pyproject.toml  rebuild.bat  requirements.txt  test_app.py
.playwright-mcp/: page-2026-06-18T07-33-21-930Z.yml  page-2026-06-18T08-29-30-197Z.yml  page-2026-06-18T09-00-14-597Z.yml  page-2026-06-18T09-46-31-434Z.yml  page-2026-06-18T10-38-34-557Z.yml  page-2026-06-18T12-54-44-056Z.yml
docs/superpowers/plans/: 2026-06-16-proshowpdf.md
docs/superpowers/specs/: 2026-06-16-proshowpdf-design.md
packaging/: build.md  proshowpdf.spec  rthook_playwright.py
proshowpdf/: __init__.py  __main__.py  app.py  logging_setup.py  update_checker.py
proshowpdf/bridge/: controller.py
proshowpdf/core/: browser_pool.py  converter_engine.py  cookie_banner.py  errors.py  models.py  naming.py  page_converter.py  pdf_postprocess.py  url_utils.py
proshowpdf/persistence/: settings_store.py
proshowpdf/resources/qss/: dark.qss  light.qss
proshowpdf/ui/: animations.py  main_window.py  theme.py
proshowpdf/ui/widgets/: card.py  collapsible_card.py  options_panel.py  output_picker.py  progress_view.py  results_panel.py  url_input.py
tests/: test_cookie_banner.py  test_naming.py  test_page_converter.py  test_pdf_postprocess.py  test_update_checker.py  test_url_utils.py
